[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/menu_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/label_dynamicfont.tres" type="DynamicFont" id=3]

[node name="Menu" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 1 )

[node name="LabelTitle" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_top = 90.0
margin_right = 450.0
margin_bottom = 170.0
rect_min_size = Vector2( 900, 80 )
custom_fonts/font = ExtResource( 3 )
text = "pirate and crocodile"
align = 1
uppercase = true

[node name="ButtonPirate" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -200.0
margin_right = 75.0
margin_bottom = -140.0
grow_horizontal = 2
rect_min_size = Vector2( 170, 60 )
custom_fonts/font = ExtResource( 2 )
text = "PIRATE"

[node name="ButtonCroco" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -100.0
margin_right = 87.0
margin_bottom = -40.0
grow_horizontal = 2
rect_min_size = Vector2( 170, 60 )
custom_fonts/font = ExtResource( 2 )
text = "CROCODILE"

[node name="ButtonOptions" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 50.0
margin_right = 75.0
margin_bottom = 50.0
grow_horizontal = 2
rect_min_size = Vector2( 170, 60 )
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS"

[node name="ButtonQuit" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 160.0
margin_right = 75.0
margin_bottom = 30.0
grow_horizontal = 2
rect_min_size = Vector2( 170, 60 )
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[node name="LabelCopyright" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -60.0
margin_right = -50.0
margin_bottom = -30.0
rect_min_size = Vector2( 200, 30 )
custom_colors/font_color = Color( 0.356863, 0.380392, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Crabman 2022"
align = 1

[connection signal="pressed" from="CanvasLayer/ButtonPirate" to="." method="_on_ButtonPirate_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonCroco" to="." method="_on_ButtonCroco_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
